fix overflow-x on desktop

--- a/src/pages/Login/style.sass
+++ b/src/pages/Login/style.sass
@@ -7,10 +7,10 @@
     align-items: center
     margin: 6rem 1rem 4rem
     @include mixins.desktop
-        margin: 8rem 1rem 4rem
+        margin: 8rem 0 4rem
     &__info
-        background: #fff
         width: 100%
+        background: #fff
         padding: 3rem 1rem
         color: variables.$orange
         text-align: center
